# dser

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  compile_commands.json  run.sh  update_clang_config.sh
.cache/clangd/index/: file.cpp.A7493A7071F4E9B9.idx  file.h.D66391B9ED42D8C5.idx  inet_socket.h.4BF947E7027F1AF4.idx  json_parser.cpp.DCEEAEBEA52EE572.idx  json_parser.h.3C6CCC9879737D7F.idx  main.cpp.D7BF873BC500AA23.idx  socket.cpp.18FAE54537488937.idx  socket.h.BCC0517BC09148E2.idx
assets/json/: 1.json
assets/requests/: google_example.http  pdf_example.http
bulid/: build.ninja
include/: json.h
include/dser/: algorithms.h  assert.h  byte_buffer.h  connection.h  crypto.h  desktop_file.h  examples.h  exception.h  file.h  fs.h  generics.h  http.h  http_connection.h  http_parser.h  inet_socket.h  json.h  json_parser.h  json_parser2.h  log.h  path.h  pipe.h  postgres.h  postgres_app.h  postgres_command.h  router.h  server.h  signals.h  socket.h  socket_utils.h  thread_pool.h  utils.h  websocket.h
include/dser/crypto/: hex_base.h  sha256.h
src/: algorithms.cpp  assert.cpp  crypto.cpp  desktop_file.cpp  file.cpp  fs.cpp  http.cpp  http_connection.cpp  http_parser.cpp  inet_socket.cpp  json_parser.cpp  json_parser2.cpp  log.cpp  main.cpp  path.cpp  pipe.cpp  postgres.cpp  postgres_app.cpp  postgres_command.cpp  router.cpp  server.cpp  signals.cpp  socket.cpp  socket_utils.cpp  tests.cpp  utils.cpp  websocket.cpp
src/crypto/: hex_base.cpp  sha256.cpp
tests/: CMakeLists.txt  path_test.cpp
