# enable_testing()

# Find gtest
# find_package(GTest REQUIRED)
# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)

# Test files
# file(GLOB TEST_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

# Create test executable
# add_executable(runTests ${TEST_SRC_FILES})
# target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)

# Add tests
# add_test(NAME AllTests COMMAND runTests)
